--- a/angularapp/src/app/signin/signin.component.html
+++ b/angularapp/src/app/signin/signin.component.html
@@ -15,8 +15,8 @@
                 <mat-label>Password</mat-label>
                 <input required type="password" formControlName="password" matInput>
             </mat-form-field>
-            <button type="button" mat-button [routerLink]="['/signup']">Create an account</button>
-            <button class="login-button" type="submit" [disabled]="!loginForm.valid" mat-raised-button>Sign In</button>
+            <a mat-button [routerLink]="['/signup']" queryParamsHandling="preserve">Create an account</a>
+            <button class="login-button" [disabled]="!loginForm.valid" mat-raised-button>Sign In</button>
         </form>
     </mat-card-content>
 </mat-card>
