--- a/angularapp/src/app/post/post.component.html
+++ b/angularapp/src/app/post/post.component.html
@@ -1,16 +1,24 @@
 <mat-card class="post">
-    <mat-card-header>
-        <mat-chip-set cdkDropList
-                      cdkDropListOrientation="horizontal">
-            <mat-chip cdkDrag *ngFor="let tag of postTags">
-                {{tag}}
-            </mat-chip>
-        </mat-chip-set>
-    </mat-card-header>
-    <mat-card-header>
-        <mat-card-title>{{title}}</mat-card-title>
-        <mat-card-subtitle *ngIf="postCreatedOn" class="user">{{getFormattedAuthor(author)}} • {{dateHelperService.getTimePassedString(postCreatedOn, timeOnPageLoad)}}</mat-card-subtitle>
-    </mat-card-header>
+    <div class="headers">
+        <a id="post-edit-button" *ngIf="isOwnPost" matSuffix mat-button [routerLink]="['edit']" (click)="savePostInfo()">
+            Edit
+        </a>
+        <mat-card-header>
+            <mat-chip-set cdkDropList
+                          cdkDropListOrientation="horizontal">
+                <mat-chip cdkDrag *ngFor="let tag of postTags">
+                    {{tag}}
+                </mat-chip>
+            </mat-chip-set>
+        </mat-card-header>
+        <mat-card-header>
+            <mat-card-title>{{title}}</mat-card-title>
+            <mat-card-subtitle *ngIf="postCreatedOn" class="user">
+                {{getFormattedAuthor(author)}} •
+                {{dateHelperService.getTimePassedString(postCreatedOn, timeOnPageLoad)}}
+            </mat-card-subtitle>
+        </mat-card-header>
+    </div>
 
     <mat-card-content [cdkCopyToClipboard]="content" class="code" *ngIf="postType == 'snippet'"><mat-icon>content_copy</mat-icon>{{content}}</mat-card-content>
     <mat-card-content *ngIf="postType == 'discussion'">{{content}}</mat-card-content>
