--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div class="heading">
     <h1>{{getPostTypeTitle()}}</h1>
-    <button mat-raised-button color="accent" [routerLink]="['/new_post']" [queryParams]="{ type: postTypeFormControl.value }">Create a new post</button>
+    <a mat-raised-button color="accent" [routerLink]="['/new_post']" [queryParams]="{ type: postTypeFormControl.value }">Create a new post</a>
 </div>
 <div class="search-bar">
     <mat-form-field>
@@ -25,9 +25,9 @@
                     {{tag}}
                 </mat-chip>
             </mat-chip-set>
-        </mat-card-header>
+        </mat-card-header>        
         <mat-card-header>
-            <mat-card-title>{{post.title}}</mat-card-title>
+            <mat-card-title><a [routerLink]="['/post', post.id]">{{post.title}}</a></mat-card-title>
             <mat-card-subtitle>{{getFormattedAuthor(post.author)}} • {{dateHelperService.getTimePassedString(post.createdOn, timeOnPageLoad)}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content *ngIf="postTypeFormControl.value == 'discussion'">{{post.content}}</mat-card-content>
@@ -35,9 +35,9 @@
             <code appClickStopPropagation (click)="openCopySnackBar()" [cdkCopyToClipboard]="post.content" cli><mat-icon>content_copy</mat-icon>{{post.content}}</code>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button>Comment ({{post.commentCount}})</button>
+            <a [routerLink]="['/post', post.id]" mat-button>Comment ({{post.commentCount}})</a>
             <button mat-button [class.button-pressed]="post.isVotedByUser" (click)="voteOnPost($event, post)">Vote ({{post.voteCount}})</button>
         </mat-card-actions>
-    </mat-card>
+</mat-card>
     <mat-progress-bar color="accent" [style.visibility]="isTryingToLoadPosts ? 'visible' : 'hidden'" mode="indeterminate"></mat-progress-bar>
 </div>
