--- a/angularapp/src/app/signup/signup.component.html
+++ b/angularapp/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title><h1>Create an account</h1></mat-card-title>
     <mat-card-content>
-        <mat-progress-bar color="accent" [style.visibility]="isLoading ? 'visible' : 'hidden'" mode="indeterminate"></mat-progress-bar>
+        <mat-progress-bar [style.visibility]="isLoading ? 'visible' : 'hidden'" mode="indeterminate"></mat-progress-bar>
         <div class="error-message" [style.visibility]="(isSignupFailed && !isLoading) ? 'visible' : 'hidden'">
             <span [innerHTML]="errorMessage"></span>
         </div>
@@ -37,7 +37,7 @@
                     </mat-error>
                 </mat-form-field>
             </p>
-            <button mat-raised-button [disabled]="!registerForm.valid">Create an account</button>
+            <button color="primary" mat-raised-button [disabled]="!registerForm.valid">Create an account</button>
         </form>
     </mat-card-content>
 </mat-card>
