--- a/angularapp/src/app/app.component.css
+++ b/angularapp/src/app/app.component.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	--mdc-shape-small: 10px;
 }
 
 main {
@@ -19,4 +20,15 @@ footer {
 	text-align: center;
 	padding: 20px;
 	background-color: #00000055;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper {
+	border-top-left-radius: 10px !important;
+	border-top-right-radius: 10px !important;
+}
+
+::ng-deep .mat-mdc-card,
+::ng-deep .mat-expansion-panel,
+::ng-deep .mdc-snackbar__surface {
+	border-radius: 10px !important;
 }
