--- a/angularapp/src/app/nav-menu/nav-menu.component.css
+++ b/angularapp/src/app/nav-menu/nav-menu.component.css
@@ -1,7 +1,21 @@
-.home-button {
-	font-size: large;
+.logo-start {
+	font-size: 20px;
+	font-family: monospace;
+	color: #ffc000;
+}
+
+.logo-end {
+	font-size: 20px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color: white;
+	font-weight: lighter;
 }
 
 .spacer {
 	flex: 1 1 auto;
+}
+
+.center {
+	display: flex;
+	align-items: center;
 }
