--- a/angularapp/src/app/new-post/new-post.component.css
+++ b/angularapp/src/app/new-post/new-post.component.css
@@ -30,9 +30,9 @@ mat-chip-set {
 .code {
 	margin-top: 20px;
 	display: block;
-	background: #2e2b2b;
-	border: #808080 1px solid !important;
-	border-radius: 5px;
+	background: #1f2133;
+	border: #4d527b 1px solid !important;
+	border-radius: 10px;
 	padding: 10px;
 	font-family: monospace !important;
 }
