--- a/angularapp/src/app/post/post.component.html
+++ b/angularapp/src/app/post/post.component.html
@@ -3,7 +3,7 @@
         <a id="post-edit-button" *ngIf="isOwnPost" matSuffix mat-button [routerLink]="['edit']" (click)="savePostInfo()">
             Edit
         </a>
-        <mat-card-header>
+        <mat-card-header *ngIf="postTags.length > 0">
             <mat-chip-set cdkDropList
                           cdkDropListOrientation="horizontal">
                 <mat-chip (click)="filterByTag(tag)" cdkDrag *ngFor="let tag of postTags">
