--- a/angularapp/src/app/posts/posts.component.css
+++ b/angularapp/src/app/posts/posts.component.css
@@ -9,7 +9,7 @@
 }
 
 .button-pressed {
-	background-color: #393939;
+	background-color: #292a45;
 }
 
 .heading {
@@ -30,9 +30,9 @@ mat-card-content, mat-card-title {
 code {
 	margin-top: 10px;
 	display: block;
-	background: #2e2b2b;
-	border: #808080 1px solid;
-	border-radius: 5px;
+	background: #1f2133;
+	border: #4d527b 1px solid;
+	border-radius: 10px;
 	padding: 10px;
 	cursor: pointer;
 	min-height: 25px;
