--- a/angularapp/src/custom-theme.scss
+++ b/angularapp/src/custom-theme.scss
@@ -1,32 +1,58 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
-// Plus imports for other components in your app.
+@use 'sass:map';
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-
 $primary: (
-    50 : #e4e9ed,
-    100 : #bbc7d3,
-    200 : #8da2b6,
-    300 : #5f7c98,
-    400 : #3d6082,
-    500 : #1b446c,
-    600 : #183e64,
-    700 : #143559,
-    800 : #102d4f,
-    900 : #081f3d,
-    A100 : #74a8ff,
-    A200 : #4188ff,
-    A400 : #0e68ff,
-    A700 : #005bf4,
+    50 : #fff7e0,
+    100 : #ffecb3,
+    200 : #ffe080,
+    300 : #ffd34d,
+    400 : #ffc926,
+    500 : #ffc000,
+    600 : #ffba00,
+    700 : #ffb200,
+    800 : #ffaa00,
+    900 : #ff9c00,
+    A100 : #ffffff,
+    A200 : #fff9f2,
+    A400 : #ffe3bf,
+    A700 : #ffd8a6,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$accent: (
+    50 : #e3e3e5,
+    100 : #b9babe,
+    200 : #8b8c92,
+    300 : #5d5e66,
+    400 : #3a3c46,
+    500 : #171925,
+    600 : #141621,
+    700 : #11121b,
+    800 : #0d0e16,
+    900 : #07080d,
+    A100 : #5252ff,
+    A200 : #1f1fff,
+    A400 : #0000eb,
+    A700 : #0000d2,
     contrast: (
         50 : #000000,
         100 : #000000,
@@ -38,54 +64,17 @@ $primary: (
         700 : #ffffff,
         800 : #ffffff,
         900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
+        A100 : #ffffff,
+        A200 : #ffffff,
         A400 : #ffffff,
         A700 : #ffffff,
     )
 );
 
-$analogous: (
-    50 : #e4eded,
-    100 : #bbd3d3,
-    200 : #8db6b6,
-    300 : #5f9898,
-    400 : #3d8282,
-    500 : #1b6c6c,
-    600 : #186464,
-    700 : #145959,
-    800 : #104f4f,
-    900 : #083d3d,
-    A100 : #74ffff,
-    A200 : #41ffff,
-    A400 : #0effff,
-    A700 : #00f4f4,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
-
 $angularapp-primary: mat.define-palette($primary);
-$angularapp-accent: mat.define-palette($analogous);
-
-// The warn palette is optional (defaults to red).
+$angularapp-accent: mat.define-palette($accent);
 $angularapp-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $angularapp-theme: mat.define-dark-theme(
 	(
 		color: (
@@ -97,7 +86,15 @@ $angularapp-theme: mat.define-dark-theme(
 	)
 );
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+$material-theme-overrides: (
+  'color': (
+    'background': (
+      'background': #1f2133,
+      'card': #2d304b,
+	  'app-bar': #151622,
+    ),
+  ),
+);
+
+$angularapp-theme: map.deep-merge($angularapp-theme, $material-theme-overrides);
 @include mat.all-component-themes($angularapp-theme);
