--- a/angularapp/src/app/post/post.component.css
+++ b/angularapp/src/app/post/post.component.css
@@ -66,3 +66,14 @@ mat-card-content, mat-card-title {
 	width: fit-content;
 	margin: 10px;
 }
+
+.editor {
+	border-radius: 10px;
+	border: 10px solid #1e1e1e;
+	height: 50vh;
+}
+
+::ng-deep .editor-container {
+	height: 100% !important;
+	background: #1e1e1e;
+}
