--- a/angularapp/src/app/post/post.component.html
+++ b/angularapp/src/app/post/post.component.html
@@ -20,7 +20,11 @@
         </mat-card-header>
     </div>
 
-    <mat-card-content [cdkCopyToClipboard]="content" class="code" *ngIf="postType == 'snippet'"><mat-icon>content_copy</mat-icon>{{content}}</mat-card-content>
+    <mat-card-content appClickStopPropagation style="cursor: default" *ngIf="postType == 'snippet'">
+        <mat-icon (click)="openCopySnackBar()" [cdkCopyToClipboard]="content" style="position: absolute; float: right; z-index: 10; margin: 10px; cursor: pointer">content_copy</mat-icon>
+        <ngx-monaco-editor class="editor" [options]="editorOptions" [(ngModel)]="content"></ngx-monaco-editor>
+        <span style="position: absolute;margin-top: -25px;margin-left: 5px;color: #8b8b8b">{{editorOptions.language}}</span>
+    </mat-card-content>
     <mat-card-content *ngIf="postType == 'discussion'">{{content}}</mat-card-content>
     <mat-card-actions>
         <button mat-button (click)="commentsSection.startReply(-1)">Comment ({{getCommentCount()}})</button>
